--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
       </nav>
     </div>
 
-    <div class="p-4 p-md-5 mb-4 text-white rounded-3 bg-cover" style="
-					background-image: url(https://images.unsplash.com/photo-1743653537429-a94889a6fd47?q=80&w=1472&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
-				">
+    <div class="p-4 p-md-5 mb-4 text-white rounded-3 bg-cover" style="background-image: url(https://images.unsplash.com/photo-1743653537429-a94889a6fd47?q=80&w=1472&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);">
       <!-- 此圖片在網站只用一次故可用style加入（如圖片會被重複利用應改用class），.bg-cover樣式取用自head內自定義的style-->
       <div class="col-md-6">
         <h1 class="display-4 fst-italic">Bootstrap5 Blog 版型練習作業</h1>
@@ -86,9 +84,7 @@
                     <a href="#" class="stretched-link text-end">繼續閱讀</a>
                   </div>
                 </div>
-                <div class="col-4 d-none d-md-block bg-cover" style="
-											background-image: url(https://images.unsplash.com/photo-1548766232-e0c28830f43e?q=80&w=1335&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
-										"></div>
+                <div class="col-4 d-none d-md-block bg-cover" style="background-image: url(https://images.unsplash.com/photo-1548766232-e0c28830f43e?q=80&w=1335&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);"></div>
                 <!-- 先設定右側圖片空間col-4，左側文字讓他自適應 -->
               </div>
             </div>
@@ -105,9 +101,7 @@
                     <a href="#" class="stretched-link text-end">繼續閱讀</a>
                   </div>
                 </div>
-                <div class="col-4 d-none d-md-block bg-cover" style="
-											background-image: url(https://images.unsplash.com/photo-1548943544-56e76b7c16d0?q=80&w=1335&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
-										"></div>
+                <div class="col-4 d-none d-md-block bg-cover" style="background-image: url(https://images.unsplash.com/photo-1548943544-56e76b7c16d0?q=80&w=1335&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);"></div>
               </div>
             </div>
           </div>
@@ -128,9 +122,7 @@
                     <a href="#" class="stretched-link text-end">繼續閱讀</a>
                   </div>
                 </div>
-                <div class="col-4 d-none d-md-block bg-cover" style="
-											background-image: url(https://images.unsplash.com/photo-1549228167-511375f69159?q=80&w=1276&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
-										"></div>
+                <div class="col-4 d-none d-md-block bg-cover" style="background-image: url(https://images.unsplash.com/photo-1549228167-511375f69159?q=80&w=1276&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);"></div>
               </div>
             </div>
             <div class="col">
@@ -146,9 +138,7 @@
                     <a href="#" class="stretched-link text-end">繼續閱讀</a>
                   </div>
                 </div>
-                <div class="col-4 d-none d-md-block bg-cover" style="
-											background-image: url(https://images.unsplash.com/photo-1548772981-2fded21624d9?q=80&w=1287&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
-										"></div>
+                <div class="col-4 d-none d-md-block bg-cover" style="background-image: url(https://images.unsplash.com/photo-1548772981-2fded21624d9?q=80&w=1287&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);"></div>
               </div>
             </div>
           </div>
@@ -168,9 +158,7 @@
                     <a href="#" class="stretched-link text-end">繼續閱讀</a>
                   </div>
                 </div>
-                <div class="col-4 d-none d-md-block bg-cover" style="
-											background-image: url(https://images.unsplash.com/photo-1548684486-f61d163b2f6a?q=80&w=1285&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
-										"></div>
+                <div class="col-4 d-none d-md-block bg-cover" style="background-image: url(https://images.unsplash.com/photo-1548684486-f61d163b2f6a?q=80&w=1285&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);"></div>
               </div>
             </div>
             <div class="col">
@@ -186,9 +174,7 @@
                     <a href="#" class="stretched-link text-end">繼續閱讀</a>
                   </div>
                 </div>
-                <div class="col-4 d-none d-md-block bg-cover" style="
-											background-image: url(https://images.unsplash.com/photo-1548625149-720134d51a3a?q=80&w=1364&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
-										"></div>
+                <div class="col-4 d-none d-md-block bg-cover" style="background-image: url(https://images.unsplash.com/photo-1548625149-720134d51a3a?q=80&w=1364&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);"></div>
               </div>
             </div>
           </div>
