carousel func update

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
     </div>
 
-    <div class="carousel slide" id="carouselSlide" data-bs-ride="carousel" data-bs-interval="4000">
+    <div class="carousel slide" id="carouselSlide" data-bs-ride="carousel" data-bs-interval="4000" data-bs-touch="true">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <div class="row row-cols-1 row-cols-lg-2 mb-4">
